--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
+# Enable logging
+logging.level.org.hibernate.SQL=DEBUG
+# Enable logging for HikariCP to verify that it is used
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
