--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -9,3 +9,7 @@ validation.password.range=Password range must be 8-18.
 validation.password.notNull=Password cannot be null
 validation.password.regex=Password must has 1 lowercase, 1 uppercase and 1 digit.
 
+##Words Validation
+validation.words.range=Words range must be 1-80.
+validation.words.notNull=Words cannot be null
+
