UserWod model beginning

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -13,3 +13,6 @@ validation.password.regex=Password must has 1 lowercase, 1 uppercase and 1 digit
 validation.word.range=Words range must be 1-80.
 validation.word.notNull=Words cannot be null
 
+##UserWord Validation
+validation.userword.notNull= Word id cannot be null
+
